force-app/main/default/objects/Solicitud_Transferencia_Intervalo__c/fields/activo__c.field-meta.xml
<CustomField>
    <fullName>activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>activo</label>
    <type>Checkbox</type>
</CustomField>