force-app/main/default/objects/Solicitud_Transferencia_Intervalo__c/fields/fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>fecha_fin__c</fullName>
    <label>fecha fin</label>
    <type>Date</type>
</CustomField>