force-app/main/default/objects/Solicitud_Transferencia_Intervalo__c/fields/fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>fecha_inicio__c</fullName>
    <label>fecha inicio</label>
    <type>Date</type>
</CustomField>