force-app/main/default/objects/Solicitud_Transferencia_Intervalo__c/fields/meses_atras__c.field-meta.xml
<CustomField>
    <fullName>meses_atras__c</fullName>
    <description>en la generacion de solicitudes, la fecha es el criterio de busuqeda para encontrar los pedidos a los que se les debe generar la solicitud</description>
    <label>meses atras</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>